fix(02): revise plans based on checker feedback

--- a/.planning/phases/02-kubernetes-abstraction-layer/02-01-PLAN.md
+++ b/.planning/phases/02-kubernetes-abstraction-layer/02-01-PLAN.md
@@ -82,6 +82,8 @@ type Interface interface {
 }
 ```
 
+**IMPORTANT: runtime.Object compatibility.** `*corev1.PodList` and `*corev1.NodeList` both implement `runtime.Object` (via embedded `metav1.TypeMeta`). This means the pager closure `func(ctx, opts) (runtime.Object, error)` can call `c.k8sClient.ListPods(ctx, namespace, opts)` directly — the return type `*corev1.PodList` satisfies `runtime.Object` without any casting. The same applies to `ListNodes` returning `*corev1.NodeList`. This is the key reason the interface methods return typed list pointers rather than `runtime.Object`.
+
 Create `pkg/kubernetes/client.go` implementing the real client:
 
 - Define `Client` struct with `clientset *kubernetes.Clientset` and `config *rest.Config` fields.
